HBASE-12985 Javadoc warning and findbugs fixes to get us green again